tests/fixtures/invalid/pow_set_int_str.py
# Cannot call pow() with Set[int], Int, Str
x = pow({1, 2, 3}, 1, "hello")
